fixed spacing between nav list

--- a/main.css
+++ b/main.css
@@ -396,6 +396,8 @@ a {
 
     .nav {
         display: contents;
+        display: block;
+        margin-left: 1.5rem;
     }
 
     .about {
